# Text-Editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  testfile.txt
include/: editor.hpp  gap.hpp  gap_buffer.hpp  globals.hpp  renderer.hpp  terminal.hpp
src/: editor.cpp  gap_buffer.cpp  main.cpp  renderer.cpp  terminal.cpp
